objects/zkfedex__Shipment__c.object
<CustomObject>
    <customHelpPage>zkfedex__shipmentHelp</customHelpPage>
    <description>FedEx Shipment is a collection of data that represents the details of the FedEx shipment.</description>
    <fields>
        <fullName>zkfedex__ActualDeliveryDate__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkfedex__Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__CiComments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CiCustomerInvoiceNumber__c</fullName>
        <label>Customer Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CiFreightCharge__c</fullName>
        <label>Freight Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__CiInsuranceCharge__c</fullName>
        <label>Insurance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__CiPurposeOfShipmentDescription__c</fullName>
        <label>Purpose of Shipment Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CiPurposeOfShipment__c</fullName>
        <label>Purpose of Shipment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CiTaxesOrMiscCharge__c</fullName>
        <label>Taxes or Misc Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__CiTermsOfSale__c</fullName>
        <label>Terms of Sale</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__DeliveryDate__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkfedex__DeliveryDayOfWeek__c</fullName>
        <label>Delivery Day of Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__DeliveryTransitTime__c</fullName>
        <label>Delivery Transit Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__DimensionUnits__c</fullName>
        <label>Dimension Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                    <default>true</default>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__DocumentContentType__c</fullName>
        <label>Document Content Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__DutiesPaymentType__c</fullName>
        <label>Duties/Taxes/Fees Payment Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__DutiesPayorAccountCountry__c</fullName>
        <label>Duties Payor Account Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__DutiesPayorAccount__c</fullName>
        <label>Duties/Taxes/Fees Payor Account</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EMailMessage__c</fullName>
        <label>Email Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__EMailNotifyOnDeliveryAlso__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notify EMail recipients on delivery, in addition to when shipped</description>
        <inlineHelpText>Notify EMail recipients on delivery, in addition to when shipped</inlineHelpText>
        <label>Email Notify on Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__EMailNotifyOnExceptionAlso__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notify EMail recipients on exception, in addition to when shipped</description>
        <inlineHelpText>Notify EMail recipients on exception, in addition to when shipped</inlineHelpText>
        <label>Email Notify on Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__EMailRecipient1__c</fullName>
        <label>Email Recipient 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkfedex__EMailRecipient2__c</fullName>
        <label>Email Recipient 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkfedex__EMailRecipient3__c</fullName>
        <label>Email Recipient 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkfedex__ExportComplianceStatement__c</fullName>
        <label>Export Compliance Statement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__FreightBookingConfNumber__c</fullName>
        <label>Freight Booking Confirmation Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__FreightPackingListEnclosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Packing List Enclosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__IneligibleForMoneyBackGuarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ineligible for Money Back Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__LabelImageType__c</fullName>
        <label>Label Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6 - Eltron</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6 - Zebra</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6.75 - Eltron</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6.75 - Zebra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__LastTrackUpdateTime__c</fullName>
        <label>Last Track Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkfedex__MasterTrackingId__c</fullName>
        <label>Master Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__PaymentType__c</fullName>
        <label>Payment Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__PayorAccountCountry__c</fullName>
        <label>Payor Account Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__PayorAccount__c</fullName>
        <label>Payor Account</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientBrazilianTaxIdType__c</fullName>
        <description>Used for shipments to Brazil</description>
        <inlineHelpText>used for shipments to Brazil</inlineHelpText>
        <label>Recipient Brazilian Tax ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COMPANY</fullName>
                </value>
                <value>
                    <fullName>INDIVIDUAL</fullName>
                </value>
                <value>
                    <fullName>PASSPORT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientCity__c</fullName>
        <label>Recipient City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientCompany__c</fullName>
        <label>Recipient Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientCountry__c</fullName>
        <label>Recipient Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientEMail__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientIsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientName__c</fullName>
        <label>Recipient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientPhone__c</fullName>
        <label>Recipient Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientPostalCode__c</fullName>
        <label>Recipient Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientState__c</fullName>
        <label>Recipient State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientStreet__c</fullName>
        <label>Recipient Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientTaxIdType__c</fullName>
        <label>Recipient Tax ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__RecipientTaxId__c</fullName>
        <label>Recipient Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferenceDeptNumber__c</fullName>
        <label>Reference - Department Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferenceInvoiceNumber__c</fullName>
        <label>Reference - Invoice Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferencePoNumber__c</fullName>
        <label>Reference - P.O. Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferenceRmaNumber__c</fullName>
        <label>Reference - RMA Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ReferenceYourReference__c</fullName>
        <label>Reference - Your Reference</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderCity__c</fullName>
        <label>Sender City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderCompany__c</fullName>
        <label>Sender Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderCountry__c</fullName>
        <label>Sender Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderEMail__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderIsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sender Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderName__c</fullName>
        <label>Sender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderPhone__c</fullName>
        <label>Sender Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderPostalCode__c</fullName>
        <label>Sender Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderState__c</fullName>
        <label>Sender State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderStreet__c</fullName>
        <label>Sender Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderTaxIdType__c</fullName>
        <label>Sender Tax ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__SenderTaxId__c</fullName>
        <label>Sender Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ServiceTypeName__c</fullName>
        <label>Service Type Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ServiceType__c</fullName>
        <label>Service Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShipDate__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShipmatePreference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipmate Preference</label>
        <referenceTo>zkfedex__ShipmatePreference__c</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShipmentDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this shipment was deleted from the shipping carrier, using the &apos;Modify/Cancel&apos; utility.</description>
        <inlineHelpText>Indicates whether this shipment was deleted from the shipping carrier, using the &apos;Modify/Cancel&apos; utility.</inlineHelpText>
        <label>Shipment Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShipmentNotes__c</fullName>
        <label>Shipment Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShipmentProcessingCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Shipmate was able to successfully complete the shipment processing with the shipping carrier.</description>
        <inlineHelpText>Indicates whether Shipmate was able to successfully complete the shipment processing with the shipping carrier.</inlineHelpText>
        <label>Shipment Processing Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__SsProcessReturnShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__StatusDescription__c</fullName>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalBaseCharge__c</fullName>
        <label>Total Base Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalCustomsValue__c</fullName>
        <label>Total Customs Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalDiscounts__c</fullName>
        <label>Total Discounts</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalNetCharge__c</fullName>
        <label>Total Net Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalRebates__c</fullName>
        <label>Total Rebates</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalSurchargeDescriptions__c</fullName>
        <label>Total Surcharge Descriptions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalSurcharges__c</fullName>
        <label>Total Surcharges</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalTaxes__c</fullName>
        <label>Total Taxes</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkfedex__UserAllowedEditOfRecipientInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Shipmate user selected &quot;Allow Edit&quot; when creating this shipment. This allowed the user to change the recipient address data from the recipient address data obtained from the associated address source objects (Account, Contact, Lead, or Opportunity).</description>
        <inlineHelpText>The Shipmate user selected &quot;Allow Edit&quot; when creating this shipment. This allowed the user to change the recipient address data from the recipient address data obtained from the associated address source objects (Account, Contact, Lead, or Opportunity).</inlineHelpText>
        <label>User Allowed Edit of Recipient Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__WeightUnits__c</fullName>
        <label>Weight Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LB</fullName>
                    <default>true</default>
                    <label>LB</label>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FedEx Shipment</label>
    <listViews>
        <fullName>zkfedex__All</fullName>
        <columns>NAME</columns>
        <columns>zkfedex__SsProcessReturnShipment__c</columns>
        <columns>zkfedex__ShipmentNotes__c</columns>
        <columns>zkfedex__ShipDate__c</columns>
        <columns>zkfedex__ServiceTypeName__c</columns>
        <columns>zkfedex__RecipientName__c</columns>
        <columns>zkfedex__RecipientLead__c</columns>
        <columns>zkfedex__RecipientContact__c</columns>
        <columns>zkfedex__RecipientAccount__c</columns>
        <columns>zkfedex__RecipientOpportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zkfedex__Is_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>zkfedex__ShipmentDeleted__c</columns>
        <columns>zkfedex__Delivered__c</columns>
        <columns>zkfedex__ShipDate__c</columns>
        <columns>zkfedex__RecipientLead__c</columns>
        <columns>zkfedex__RecipientContact__c</columns>
        <columns>zkfedex__RecipientAccount__c</columns>
        <columns>zkfedex__RecipientOpportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Is Cancelled</label>
    </listViews>
    <listViews>
        <fullName>zkfedex__Thermal_Labels</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>zkfedex__ShipDate__c</columns>
        <columns>zkfedex__LabelImageType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zkfedex__LabelImageType__c</field>
            <operation>equals</operation>
            <value>Thermal 4x6 - Zebra</value>
        </filters>
        <filters>
            <field>zkfedex__LabelImageType__c</field>
            <operation>equals</operation>
            <value>Thermal 4x6 - Eltron</value>
        </filters>
        <label>Thermal Labels</label>
    </listViews>
    <listViews>
        <fullName>zkfedex__Tracking</fullName>
        <columns>NAME</columns>
        <columns>zkfedex__ShipDate__c</columns>
        <columns>zkfedex__MasterTrackingId__c</columns>
        <columns>zkfedex__LastTrackUpdateTime__c</columns>
        <columns>zkfedex__ShipmentDeleted__c</columns>
        <columns>zkfedex__Delivered__c</columns>
        <columns>zkfedex__StatusDescription__c</columns>
        <columns>zkfedex__ActualDeliveryDate__c</columns>
        <columns>zkfedex__LabelImageType__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tracking</label>
    </listViews>
    <nameField>
        <displayFormat>Shipment-{0000000000}</displayFormat>
        <label>FedEx Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>